demenchuk/examples/errors/parser/13_bad_pipeline.riv
# PARSER ERROR: Неправильный pipeline
# Ожидаемая ошибка: extraneous input at line 5

data = [1, 2, 3]
# Pipeline без правой части
result = data |>
write(result)
